# MTP32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: mtp32Config.cmake.in
lib/: CMakeLists.txt  mtp32.cpp  mtp32.h  mtp32_state_machine.plantuml
lib/test/: transport_manager_integration_tests.cpp  transport_manager_unit_tests.cpp
